2008-01-16  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.0alpha3

2008-01-14  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #6821: Empty paragraph-tags with attributes are not editable in RTE

2008-01-15  Ingmar Schlecht  <ingmar@typo3.org>

	* Added feature #6784: New login-box System-Extension "felogin". This is a refactored version of the "newloginbox" extension, now integrated into the core. (Big thanks to Steffen Kamper for writing this extension for core integration!)
	* Minor improvements to the Cleaner Backend stylesheet (by Steffen Kamper)
	* Fixes to shortcut menu of Cleaner Backend required for IE7

2008-01-15  Ingo Renner  <ingo@typo3.org>

	* added feature #5536: Some Hooks for tslib_content
	* added feature #7161: create a shortcut manager to delegate calls to create a new shortcut to the right target
	* added the shortcut menu, part of the cleaner backend project
	* added feature #7163: Make backend.php the default backend
	* cleanup: removed typo3/alt_main_new.php and typo3/sysext/topapps as it was never finished and used
	* added feature: make the page tree filter pretty, credits Bennjamin Mack

2008-01-15  Benjamin Mack  <mack@xnos.org>

	* (bugfix) #2936, 5613: Improvements to clipboard copy/move selection (by Bernhard Kraft)
	* (cleanup) #6958: added comments in t3lib_htmlmail.php, used foreach and some better variable namings (thanks to Stefano Cecere and Steffen Kamper)
	* (bugfix) #5482:t3lib_htmlmail.php is now initialized with empty variables
	* (bugfix) Fixed #7148 - CSV Export Improvements in List Module

2008-01-15  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #5660: Wrong HTTP Header on Domain Redirect (fix by Jeff Segars)

2008-01-15  Oliver Hader  <oh@inpublica.de>

	* (feature) Added feature #7122: IRRE - Implement TYPO3AJAX handler for Inline Relational Record Editing
	* (feature) Added feature #2797: Add return value to t3lib_htmlmail::send (thanks to Steffen Kamper)