@@ -1,7 +1,7 @@
 /***************************************************************
 *  Copyright notice
 *
-*  (c) 1999-2006 Kasper Skaarhoj (kasperYYYY@typo3.com)
+*  (c) 1999-2008 Kasper Skaarhoj (kasperYYYY@typo3.com)
 *  All rights reserved
 *
 *  This script is part of the TYPO3 project. The TYPO3 project is
@@ -404,7 +404,9 @@ var TBE_EDITOR = {
 		// $this->additionalJS_submit:
 		if (TBE_EDITOR.actionChecks && TBE_EDITOR.actionChecks.submit) {
 			for (funcIndex=0, funcMax=TBE_EDITOR.actionChecks.submit.length; funcIndex<funcMax; funcIndex++) {
-				eval(TBE_EDITOR.actionChecks.submit[funcIndex]);
+				try {
+					eval(TBE_EDITOR.actionChecks.submit[funcIndex]);
+				} catch(error) {}
 			}
 		}
 
